--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,9 @@
 - hosts: localhost
-  task:
+  tasks:
       - name: Deploy the service
         k8s:
             state: present
-            definition: "{{ lookup('template', 'service.yml') | from_yaml }}"
+            definition: "{{ lookup('template', '../k8s/service.yaml') | from_yaml }}"
             validate_certs: no
             namespace: default
       - name: Deploy the application
@@ -11,4 +11,4 @@
             state: present
             validate_certs: no
             namespace: default
-            definition: "{{ lookup('template', 'deployment.yml') | from_yaml }}"
+            definition: "{{ lookup('template', '../k8s/deployment.yaml') | from_yaml }}"
