--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: jenkins_service
+    name: jenkins-service
 spec:
     type: NodePort
     selector:
